# halide-android-simple

./: CMakeLists.txt  README.md  adb_run_on_device.sh  build_android.sh  build_android_exe.sh  build_android_generator.sh  build_x86.sh
gen_files/: hello.h  hello.registration.cpp  hello_generator
src/: CMakeLists.txt  hello_generator.cpp  hello_wrapper.cpp  main.cpp
